<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".HomeActivity">


    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textMainmenu"
        android:layout_width="155dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/main_menu"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMainmenu" />

    <Button
        android:id="@+id/buttonCart"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:text="cart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSearch" />

    <Button
        android:id="@+id/buttonCancelorder"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:text="@string/cancel_order"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCart" />

    <Button
        android:id="@+id/buttonAdmin"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/white"
        android:text="@string/admin"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCancelorder"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonBrowse"
        android:layout_width="169dp"
        android:layout_height="69dp"
        android:layout_marginTop="36dp"
        android:text="browse"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdmin" />

</androidx.constraintlayout.widget.ConstraintLayout>